--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
+
+
 /*navbar styling*/
 
 .navbar{
@@ -48,50 +52,23 @@
     color: white;
 }
 
-#text1{
-    margin-top: 30px;
-}
 
-input{
-    margin-top: 20px;
-    height: 40px;
-    border-radius: 10px;
-    margin-inline-start: 100px;
-    font-weight: bolder;
-    border: 3px solid green;
-    text-align: center;
-}
-
-#btn1{
-    margin-inline-start: 450px;
-    border-radius: 5px;
-    height: 40px;
-    width: 10%;
-    color: white;
-    background: green;
-    font-weight: bolder;
-    margin-top: 30px;
-}
 p{
+    padding-top: 30px;
     margin-inline-start: 100px;
-    font-weight: bolder; 
-    font-size: 25px;
-}
-
-#total{
-    margin-inline-start: 235px;
-    border: 3px solid green;
-}
-
-h1{
-    text-align: center;
+    border-radius: 10px;
     font-weight: bolder;
-    margin-top: 80px;
-    font-size: 50px;
-    color: green;
-    background-color: white;
-    border-radius: 15px;
 
+    
+}
+
+
+#text1{
+    padding-top: 100px;
+    text-align: center;
+    color: green;
+    font-weight: bolder;
+    font-size: 30px;
 }
 
 #image1{
@@ -99,21 +76,43 @@ h1{
     margin-top: 20px;
     border-radius: 80px;
     width: 50%;
-    height: 70%;
+    height: 50%;
     margin-inline-end: 30px;
 }
-
-.income{
-    margin-inline-end: -70px;
-    font-size: 30px;
-    margin-top: 60px;
-    text-align: center;
+#btn1{
+    margin-inline-start: 200px;
+    background-color: green;
+    height: 40px;
+    font-weight: bolder;
+    color: white;
+    border-radius: 15px;
 
 }
 
-#image2{
-    float: left;
-    width: 45%;
-    height: 50%;
-    border-radius: 100px;
+hr{
+    margin-top: 40px;
+}
+
+.report{
+    text-align: center;
+    background: white;
+    border-radius: 50px;
+    margin-top: 40px;
+    width: 100%;
+    padding: 10px;
+    align-items: center;
+    display: inline-block;
+}
+
+h2{
+    color: green;
+}
+
+h3{
+    color: green;
+    background: rgba(128, 128, 128, 0.062);
+    border-radius: 20px;
+    font-size: 30px;
+    font-weight: bolder;
+
 }
