--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ p{
     padding-top: 30px;
     margin-inline-start: 100px;
     border-radius: 10px;
-    font-weight: bolder;
-
+    font-weight: bold;
+    text-align: start;
     
 }
 
@@ -115,4 +115,10 @@ h3{
     font-size: 30px;
     font-weight: bolder;
 
+}
+input{
+    border-radius: 20px;
+    padding: 10px;
+    border: 2px solid green;
+    text-align: center;
 }
