--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
 
 /*navbar styling*/
 
+*{
+    
+}
+
 .navbar{
     background-color: green;
     padding: 10px;
@@ -76,7 +80,7 @@ p{
     margin-top: 20px;
     border-radius: 80px;
     width: 50%;
-    height: 50%;
+    height: 55%;
     margin-inline-end: 30px;
 }
 #btn1{
