--- a/style.css
+++ b/style.css
@@ -126,3 +126,15 @@ input{
     border: 2px solid green;
     text-align: center;
 }
+
+footer{
+    width: 100%;
+    font-size: large;
+    color:black;
+    display: flex;
+    flex-direction: row wrap;
+    justify-content: space-between;
+    text-align: center;
+    padding-top: 60px;
+    margin-top: 10px;
+  }
