--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ p{
     color: green;
     font-weight: bolder;
     font-size: 30px;
+    background-color: white;
+    border-radius: 20px;
 }
 
 #image1{
